k8s/network-policy/microservices_network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: microservices-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/microservices_network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/microservices_network: "true"
